manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: captcha-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: captcha.crossphoton.tech
    http:
      paths:
      - path: /captcha
        pathType: Prefix
        backend:
          service:
            name: captcha-service
            port:
              number: 80
      - path: /verify
        pathType: Prefix
        backend:
          service:
            name: captcha-service
            port:
              number: 80
      - path: /validate
        pathType: Prefix
        backend:
          service:
            name: captcha-service
            port:
              number: 80
